--- a/CPP/Makefile
+++ b/CPP/Makefile
@@ -1,2 +1,2 @@
-CXXFLAGS=-g -std=c++20 -Wall
+CXXFLAGS=-g -std=c++23 -O2 -Wall -Wpedantic -fsanitize=address -fsanitize=undefined -fno-omit-frame-pointer
 LDFLAGS=-lfmt
